--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@types/pino": "^7.0.5",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.0",
+    "@types/koa-mount": "^4.0.2",
+    "@types/koa-static": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
-    "class-validator-jsonschema": "^3.1.1",
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
     "prettier": "^2.8.1",
@@ -31,10 +32,9 @@
   "dependencies": {
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
-    "@types/koa-mount": "^4.0.2",
-    "@types/koa-static": "^4.0.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
+    "class-validator-jsonschema": "^3.1.1",
     "dotenv": "^16.0.3",
     "http-status": "^1.5.3",
     "kcors": "^2.2.2",
@@ -58,9 +58,8 @@
     "uuid": "^9.0.0"
   },
   "scripts": {
-    "postinstall": "sh .githooks/install.sh",
     "build": "rollup -c",
-    "serve": "node dist/serve.cjs",
+    "serve": "node serve.cjs",
     "start": "TS_NODE_PROJECT=./tsconfig.cjs.json ts-node-dev --respawn src/index.ts",
     "lint": "eslint src/**",
     "test": "jest --runInBand --forceExit --verbose --coverage"
