--- a/production.yml
+++ b/production.yml
@@ -31,7 +31,7 @@ services:
       - nginxproxy_billar_app
     env_file:
       - .env.production
-    command: sh -c "sleep 5; pm2-runtime start ecosystem.config.js"
+    command: sh -c "sleep 5; pm2-runtime start ecosystem.config.js --watch"
 
 networks:
   nginxproxy_billar_app:
