--- a/.github/workflows/push_registry.yaml
+++ b/.github/workflows/push_registry.yaml
@@ -24,22 +24,18 @@ jobs:
       - name: Get Package Version
         id: get_version
         run: echo "::set-output name=version::$(cat package.json | jq -r .version)"
-      - name: View env
-        run: |
-          echo ${DOCKER_REGISTRY}
-          echo ${DOCKER_IMAGE}
-          echo ${IMAGE_NAME}
+
+      - name: Log in to registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
+
       - name: Build Docker Image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${{ steps.get_version.outputs.version }}
+          tags: ${DOCKER_IMAGE}:${{ steps.get_version.outputs.version }}
 
-      - name: Log in to registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
-
-      - name: Push Docker Image
-        run: |
-          docker tag ${IMAGE_NAME} ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${{ steps.get_version.outputs.version }}
-          docker push ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${{ steps.get_version.outputs.version }}
+      # - name: Push Docker Image
+      #   run: |
+      #     docker tag ${IMAGE_NAME} ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${{ steps.get_version.outputs.version }}
+      #     docker push ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${{ steps.get_version.outputs.version }}
