--- a/.github/workflows/push_registry.yaml
+++ b/.github/workflows/push_registry.yaml
@@ -6,7 +6,6 @@ on:
       - production
 
 env:
-  DOCKER_REGISTRY: ghcr.io
   DOCKER_IMAGE: nandawtek/billar-api
   IMAGE_NAME: billar-api
 
@@ -28,14 +27,10 @@ jobs:
       - name: Log in to registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
 
-      - name: Build Docker Image
-        uses: docker/build-push-action@v4
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
         with:
           context: .
+          file: ${{ inputs.dockerfile }}
           push: true
-          tags: ${DOCKER_IMAGE}:${{ steps.get_version.outputs.version }}
-
-      # - name: Push Docker Image
-      #   run: |
-      #     docker tag ${IMAGE_NAME} ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${{ steps.get_version.outputs.version }}
-      #     docker push ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${{ steps.get_version.outputs.version }}
+          tags: ghcr.io/nandawtek/billar-api:${{ steps.get_version.outputs.version }}
