--- a/production.yml
+++ b/production.yml
@@ -19,7 +19,7 @@ services:
       - .env.production
 
   billar-node:
-    image: docker.pkg.github.com/nandawtek/billar-api:0.0.1
+    image: ghcr.io/nandawtek/billar-api:0.0.1
     container_name: billar-node
     depends_on:
       - billar-postgres
