--- a/production.yml
+++ b/production.yml
@@ -16,7 +16,7 @@ services:
     command:
       - '-p 5439'
     env_file:
-      - .env.production.example
+      - .env.production
 
   billar-node:
     image: ghcr.io/nandawtek/billar-api:${APP_VERSION}
@@ -30,7 +30,7 @@ services:
     networks:
       - nginxproxy_billar_app
     env_file:
-      - .env.production.example
+      - .env.production
     command: sh -c "sleep 5; pm2-runtime start ecosystem.config.js --watch"
 
 networks:
