--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-NODE_ENV=development
+NODE_ENV=testing
 RESTAPI_PORT=8000
 RESTAPI_VERSION=v1
-DATABASE_HOST=localhost
-DATABASE_PORT=5438
+DATABASE_HOST=postgres
+DATABASE_PORT=5432
 DATABASE_NAME=database_name
 DATABASE_USER=user_name
 DATABASE_PASSWORD=secret_password
