--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -35,5 +35,8 @@ jobs:
       - name: Add .env
         run: cp .env.example .env && cat .env
 
+      - name: Create Logs File
+        run: touch logs/logs.log
+
       - name: Launch Test
         run: yarn test
