--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -36,7 +36,7 @@ jobs:
         run: cp .env.example .env && cat .env
 
       - name: Create Logs File
-        run: touch logs/logs.log
+        run: mkdir logs && touch logs/logs.log
 
       - name: Launch Test
         run: yarn test
