--- a/production.yml
+++ b/production.yml
@@ -31,6 +31,8 @@ services:
       - nginxproxy_billar_app
     env_file:
       - .env.production
+    volumes:
+      - ./logs/:/app/logs
     command: sh -c "sleep 5; pm2-runtime start ecosystem.config.js --watch"
 
 networks:
