--- a/filebeat.docker.yml
+++ b/filebeat.docker.yml
@@ -10,5 +10,8 @@ filebeat.inputs:
 
 output.elasticsearch:
   hosts: ['https://elasticsearch.nandawtek.es']
+  index: 'billar-api-%{[fields.log_type]}-%{[agent.version]}-%{+yyyy.MM.dd}'
   username: elastic
   password: elk_24xA_1_NN
+setup.template.name: 'billar-api'
+setup.template.pattern: 'billar-api-*'
