--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -38,5 +38,19 @@ jobs:
       - name: Create Logs File
         run: mkdir logs && touch logs/logs.log
 
-      - name: Launch Test
-        run: yarn test
+      sonarqube:
+    name: sonarqube
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 
+      - name: Install dependencies
+        run: yarn
+      - name: Test and coverage
+        run: yarn jest --coverage
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
