add exclusions for sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,5 @@
 sonar.projectKey=NaNdaWteK_billar-api_AYlOElGSZvGRwFH8c500
 sonar.typescript.lcov.reportPaths=./coverage/lcov.info
+sonar.coverage.exclusions=**/node_modules/**/*.*, **/dist/**/*.*, **/tests/**/*.*, **/.githooks/**/*.*, **/.github/**/*.*, **/.vscode/**/*.*, **/coverage/**/*.*
+sonar.exclusions=**/node_modules/**/*.*, **/dist/**/*.*, **/.githooks/**/*.*, **/.github/**/*.*, **/.vscode/**/*.*, **/coverage/**/*.*
+
